Add some file headers

--- a/browser/index.html
+++ b/browser/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <label for="token">Token:</label>
-    <input id="token" type="text" placeholder="Your Bot Token"></input>
+    <input id="token" type="text" placeholder="Your Bot Token" />
     <button id="login">Login!</button>
-    <script src="./bundle.js"></script>
+    <script src="./build/bundle.js"></script>
 </body>
 
 </html>
